# melissa-blog

./: .gitignore  404.html  5-reasons-to-be-a-digital-nomad.html  CNAME  README.md  about  about.html  about.rst  archive  archive.html  atom.xml  contact  contact.html  contact.markdown  contact.md  index.html  melissa-blog.cabal  melissakaton.cabal  pictures.html  pictures.md  roadmap.md  site.hs  stack.yaml
5-reasons-to-be-a-digital-nomad/: index.html
_site/: contact.html
about/: cv.md  index.html
album/beach/: index.html
album/geel/: index.html
album/malinois/: index.html
archive/: index.html
author/melissa-katon/: index.html
blog/: index.html
blog/remote-work/: index.html  test-2.md  (+1 more)
contact/: index.html
css/: blog.css  default.css
open-university/: index.html
picture-posts/: geel.html  geel.md  geeljump.html  geeljump.md
pictures/: geel.html  geel.jpg.metadata  geeljump.gif.metadata  geeljump.html  index.html
posts/: 2015-08-23-example  2015-08-23-example.html  2016-06-10-firstpost.html  2016-06-10-firstpost.markdown  2016-06-11-geelreasons.html  2016-06-11-geelreasons.md  2016-06-11-tryout.html  2016-06-11-tryout.md  2016-06-12-5-reasons-to-be-a-digital-nomad.md  2016-06-12-5rdn.html  2016-06-12-5rdn.md  5-reasons-to-be-a-digital-nomad.md
remote-work/: index.html
src/: Breadcrumbs.hs  CleanRoutes.hs  Config.hs  Context.hs  Main.hs  Match.hs  PrettyCategory.hs  RelatedPosts.hs  Utils.hs
templates/: album.html  archive.html  default.html  index-post-list.html  picture-post-list.html  picture-post.html  pictures.html  post-list.html  post.html  tag.html  travel-overview.html  trips.html
travel/: index.html
(+31 files in other folders)
