name:                melissa-blog
version:             0.0.0.1
synopsis:            Personal blog
description:         Please see README.md
homepage:            https://github.com/melissakaton/melissakaton.github.io
license:             BSD3
license-file:        LICENSE
author:              Melissa Jade Katon
maintainer:          melissa.katon@gmail.com
copyright:           2016 Melissa Jade Katon
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable melissa-blog
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       hakyll == 4.7.*
