name:                melissa-blog
version:             0.0.0.1
synopsis:            Personal blog
description:         Please see README.md
homepage:            https://github.com/melissakaton/melissakaton.github.io
license:             BSD3
license-file:        LICENSE
author:              Melissa Jade Katon
maintainer:          melissa.katon@gmail.com
copyright:           2016 Melissa Jade Katon
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable melissa-blog
  main-is:             Main.hs
  default-language:    Haskell2010
  Hs-source-dirs:      src
  ghc-options:         -threaded -Wall
  build-depends:       base == 4.*,
                       filepath == 1.*,
                       hakyll == 4.7.*,
                       blaze-html == 0.8.*,
                       containers == 0.5.*
